--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 
 form {
-    margin: 30px 0;
-    border: 3px dotted #ddd;
     padding: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 label {
@@ -34,10 +33,9 @@ textarea {
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    padding: 0px;
-    gap: 17px;
     width: 100vh;
     height: 100vh;
+    scale: 1.5;
 }
 
 body{
@@ -46,5 +44,33 @@ body{
 
 .welcomeImage{
     margin: 5% 20%;
-    width: 70%;
+    width: 95%;
+}
+
+.MindUpTitle{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.helloText{
+    color: #4A8B49;
+    margin: 0;
+}
+
+.entranceButton{
+    width: 100%;
+    background-color: #026228;
+    color: white;
+    height: max-content;
+    border-radius: 30px;
+    border: hidden;
+    padding: 1.5%;
+}
+.underText{
+    display: flex;
+    justify-content: center;
+    font-weight: normal;
+}
+
+input{
+    width: 100%;
 }
