--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,13 @@ input:not([type='checkbox']):not([type='radio']) {
     display: block;
 }
 
-textarea {
-    vertical-align: top;
+h3{
+    margin-top: 0px;
 }
 
 #imageContainer{
-    width: 100vh;
+    width: 120vh;
     height: 100vh;
-    min-height: 20px;
     background: linear-gradient(#E5FFBA, #FFFFFF);
     display: inline-flex;
     flex-direction: column;
@@ -35,11 +34,11 @@ textarea {
     align-items:center;
     width: 100vh;
     height: 100vh;
-    scale: 1.5;
 }
 
 body{
     display: flex;
+    margin: 0;
 }
 
 .welcomeImage{
