--- a/groups.css
+++ b/groups.css
@@ -1,12 +1,36 @@
 body {
-    background-color: #bdffff;
+    background-image: url("pngegg.png");
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.5);
     margin: 0%;
+    height: 100vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+input {
+    border-radius: 10px;
+    
 }
 
 .menu {
     height: 50px;
     width: 100%;
-    background-color: green;
+    background: linear-gradient(to right, #F1FFDB, #E5FFBA);
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    gap: 10px;
 }
 
 .block {
@@ -21,5 +45,5 @@ body {
 }
 
 .add {
-    background-color: greenyellow;
+    background-color: rgba(255, 255, 255, 0.8);;
 }
