--- a/groups.css
+++ b/groups.css
@@ -1,3 +1,4 @@
+* {box-sizing: border-box;}
 body {
     background-image: url("pngegg.png");
     backdrop-filter: blur(5px);
@@ -5,6 +6,7 @@ body {
     margin: 0%;
     height: 100vh;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: large;
 }
 
 a {
@@ -13,8 +15,9 @@ a {
 }
 
 input {
-    border-radius: 10px;
-    
+    border-radius: 5px;
+    border: hidden;
+    padding: 0;
 }
 
 .menu {
@@ -34,7 +37,7 @@ nav {
 }
 
 .block {
-    height: 100px;
+    height: 200px;
     width: 30%;
     background-color: green;
     margin: 20px;
@@ -42,8 +45,58 @@ nav {
     justify-content: space-around;
     align-items: center;
     font-size: xx-large;
+    border-radius: 20px;
 }
 
 .add {
-    background-color: rgba(255, 255, 255, 0.8);;
+    background-color: rgba(255, 255, 255, 0.8);
+    align-items: center;
+}
+
+.search{
+    gap: 0;
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+    background: #ffffff;
+    border-radius: 10px;
+}
+
+input.placeholder {
+    text-align: center;
+}
+
+input, .searchButton {
+border: none;
+outline: none;
+background: transparent;
+}
+
+input {
+width: 100%;
+padding-left: 42px;
+}
+
+.searchButton {
+width: 42px;
+position: absolute;
+top: 0;
+left: 0;
+cursor: pointer;
+}
+
+
+.groupTitle {
+    background-color: white;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+}
+
+.group{
+    background-size: cover;
+}    
+.fiit{
+    background-image: url("Blog\ inner\ pic.png");
 }
