--- a/mindupback/mindup/templates/index.html
+++ b/mindupback/mindup/templates/index.html
@@ -11,7 +11,7 @@
 </div>
 <div id="loginContainer">
     <h1 class="MindUpTitle">MindUp</h1>
-    <form action="/login" method="post" id="login">
+    <form action="login" method="post" id="login">
         <h2 class="helloText">Привет!</h2>
         <h3>Введите email и пароль чтобы продолжить</h3>
         <label>
