--- a/registration.css
+++ b/registration.css
@@ -1,4 +1,4 @@
-
+* {box-sizing: border-box;}
 form {
     padding: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
