--- a/groups.css
+++ b/groups.css
@@ -1,13 +1,15 @@
-* {box-sizing: border-box;}
 body {
     background-image: url("pngegg.png");
-    backdrop-filter: blur(5px);
+    /*backdrop-filter: blur(5px);*/
     background-color: rgba(0, 0, 0, 0.5);
     margin: 0 auto;
-    height: 100vh;
+    padding-top: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
 }
+
+/** {*/
+/*    border: 1px solid red; !*для отладки*!*/
+/*}*/
 
 a {
     color: black;
@@ -21,10 +23,14 @@ input {
 }
 
 header {
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 100;
     height: 50px;
-    width: 100%;
     padding: 0 20px;
     background: linear-gradient(to right, #F1FFDB, #E5FFBA);
     box-sizing: border-box;
@@ -76,7 +82,8 @@ input {
 
 .groups-wrapper {
     display: flex;
-    margin: 40px auto;
+    margin: 0 auto;
+    padding: 30px 0 20px 0;
 }
 
 .groups {
