--- a/groups.css
+++ b/groups.css
@@ -1,10 +1,20 @@
 body {
-    background-image: url("pngegg.png");
-    /*backdrop-filter: blur(5px);*/
-    background-color: rgba(0, 0, 0, 0.5);
     margin: 0 auto;
     padding-top: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-image: url("site_images/background_blured.png");
+    background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    z-index: -1;
 }
 
 /** {*/
