--- a/mindupback/mindup/templates/groups.css
+++ b/mindupback/mindup/templates/groups.css
@@ -1,25 +1,18 @@
 body {
-    background-color: #bdffff;
-    margin: 0%;
+    margin: 0 auto;
+    padding-top: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.menu {
-    height: 50px;
+.background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-color: green;
-}
+    height: 100%;
 
-.block {
-    height: 100px;
-    width: 30%;
-    background-color: green;
-    margin: 20px;
-    display: inline-flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: xx-large;
-}
-
-.add {
-    background-color: greenyellow;
+    background-image: url("site_images/background_blured.png");
+    background-color: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    z-index: -1;
 }
