--- a/registration.css
+++ b/registration.css
@@ -1,7 +1,11 @@
 * {box-sizing: border-box;}
+
 form {
     padding: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+body {
+    font-family: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
 }
 
 label {
@@ -46,9 +50,6 @@ body{
     width: 95%;
 }
 
-.MindUpTitle{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 
 .helloText{
     color: #4A8B49;
