--- a/groups.css
+++ b/groups.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0 auto;
+    margin: 0;
     padding-top: 50px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
