--- a/blocks.css
+++ b/blocks.css
@@ -34,7 +34,7 @@
 }
 
 .block-background {
-    position: fixed;
+    position: absolute;
     height: 200px;
     width: 300px;
     border-radius: 20px;
