--- a/mindupback/mindup/templates/index.html
+++ b/mindupback/mindup/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MindUp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="authorisation.css">
 </head>
 <body>
 <div id="imageContainer">
@@ -11,9 +11,9 @@
 </div>
 <div id="loginContainer">
     <h1 class="MindUpTitle">MindUp</h1>
-    <form action="login" method="post" id="login">
+    <form action="/login" method="post" id="login">
         <h2 class="helloText">Привет!</h2>
-        <h3>Введите email и пароль чтобы продолжить</h3>
+        <h3>Введите email и пароль, чтобы продолжить</h3>
         <label>
             Электронная почта
             <input type="email" name="email" required placeholder="Введите электронную почту">
