--- a/blocks_meetings.css
+++ b/blocks_meetings.css
@@ -1,10 +1,3 @@
-.block .block-title {
-    text-align: left;
-    z-index: 3;
-    font-size: 0.7em;
-    font-weight: normal;
-}
-
 .block {
     display: inline-block;
     align-items: normal;
@@ -16,21 +9,41 @@
     align-items: center;
 }
 
+.block-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.block-content p {
+    display: inline-block;
+    font-size: 0.46em;
+}
+
+.block-content img {
+    display: inline-block;
+    width: 25px;
+}
+
+.block .block-title-wrapper {
+    height: 53px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.block .block-title {
+    text-align: center;
+    z-index: 3;
+    font-size: 0.7em;
+    font-weight: normal;
+}
+
 .block-info {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
     gap: 20px;
-}
-
-.meeting-info-container p {
-    display: inline-block;
-    font-size: 0.5em;
-}
-
-.block-info img {
-    display: inline-block;
-    width: 25px;
+    margin-top: 15px;
 }
 
 .icon-text-container {
@@ -42,7 +55,6 @@
 .datetime {
     display: flex;
     flex-direction: column;
-    gap: 3px;
 }
 
 .date, .time {
@@ -54,8 +66,8 @@
 }
 
 .place-wrapper,
-.datetime-wrapper {
-    /* Сюда же автора */
+.datetime-wrapper,
+.person-container {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -90,4 +102,28 @@
     color: #FFFFFF;
 
     font-weight: lighter;
+}
+
+.person-container {
+    margin-top: auto;
+}
+
+.person-info {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.person-info p {
+    margin: 0;
+}
+
+.person-name {
+    color: #0008BF;
+}
+
+.block-content .person_additional-info {
+    color: #545252;
+    font-style: italic;
+    font-size: 0.4em;
 }
