--- a/blocks_meetings.css
+++ b/blocks_meetings.css
@@ -13,9 +13,29 @@
 .meeting-status {
     position: absolute;
     /*filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.2));*/
-    top: 13px;
-    right: 15px;
-    width: 30px;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+}
+
+.meeting-status-tooltip {
+    opacity: 0;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #fff;
+    padding: 0 3px;
+    border-radius: 5px;
+    font-size: 0.4em;
+    top: 63px;
+    right: 3px;
+    cursor: default;
+    user-select: none;
+
+    transition: opacity 0.3s;
+}
+
+.meeting-status:hover + .meeting-status-tooltip {
+    opacity: 1;
 }
 
 .block-content {
@@ -39,11 +59,12 @@
     height: 53px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-left: 10px;
+    /*justify-content: center;*/
 }
 
 .block .block-title {
-    text-align: center;
+    text-align: left;
     z-index: 3;
     font-size: 0.7em;
     font-weight: normal;
