--- a/mindupback/mindup/templates/index.html
+++ b/mindupback/mindup/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MindUp</title>
-    <link rel="stylesheet" href="authorisation.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div id="imageContainer">
