--- a/mindupback/mindup/static/blocks_meetings.css
+++ b/mindupback/mindup/static/blocks_meetings.css
@@ -60,6 +60,7 @@
     display: flex;
     align-items: center;
     padding-left: 10px;
+    padding-right: 60px;
     /*justify-content: center;*/
 }
 
@@ -107,6 +108,7 @@
 
 .tags-wrapper {
     display: flex;
+    width: 170px;
     flex-direction: column;
     justify-content: space-between;
     font-size: 0.4em;
