--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -38,6 +38,7 @@
             <div class="block group add">Добавить группу</div>
         </div>
     </div>
+    <script src="network.js"></script>
 <script src="header_controller.js"></script>
 <script src="block_controller.js"></script>
 <script src="groups.js"></script>
