--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -124,6 +124,7 @@
         </div>
     </div>
 </div>
+<script src="network.js"></script>
 <script src="header_controller.js"></script>
 <script src="block_controller.js"></script>
 <script src="meetings.js"></script>
