--- a/groups_modal_add.css
+++ b/groups_modal_add.css
@@ -6,7 +6,7 @@
     bottom: 0;
     z-index: 1050;
     pointer-events: none;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 200ms ease-in;
 }
 
@@ -18,13 +18,13 @@
 
 .modal-view {
     position: fixed;
-    padding: 30px;
+    padding: 40px 30px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #EFFFD5;
     width: 600px;
-    height: 400px;
+    height: 300px;
     border-radius: 20px;
 }
 
@@ -65,16 +65,24 @@
 
 .custom-image-upload {
     display: block;
-    width: 440px;
+    width: 520px;
     height: 140px;
-    padding: 30px;
-    background: #ffffff;
+    background-color: #FFFFFF;
+    background-image: url("site_images/upload_image.png");
+    background-size: cover;
+    background-position: center;
     border-radius: 20px;
 }
 
-.custom-image-upload .upload-content {
-    width: 100%;
-    height: 100%;
-    border: 3px dashed #989898;
+.modal-view button {
+    height: 40px;
+    width: 170px;
+
+    background: #038C00;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 1.3em;
     border-radius: 20px;
+    border: none;
+    outline: none;
 }
