--- a/groups_modal_add.css
+++ b/groups_modal_add.css
@@ -75,6 +75,6 @@
 .custom-image-upload .upload-content {
     width: 100%;
     height: 100%;
-    border: 3px dashed #989898;
+    border: 5px dotted #989898;
     border-radius: 20px;
 }
