--- a/groups_modal_add.css
+++ b/groups_modal_add.css
@@ -69,6 +69,7 @@
     height: 140px;
     background-color: #FFFFFF;
     background-image: url("site_images/upload_image.png");
+    box-shadow: 0 3px 5px rgba(42, 42, 42, 0.2);
     background-size: cover;
     background-position: center;
     border-radius: 20px;
