--- a/groups_modal_add.css
+++ b/groups_modal_add.css
@@ -24,7 +24,7 @@
     transform: translate(-50%, -50%);
     background-color: #EFFFD5;
     width: 600px;
-    height: 300px;
+    height: 400px;
     border-radius: 20px;
 }
 
@@ -65,14 +65,32 @@
 
 .custom-image-upload {
     display: block;
-    width: 520px;
-    height: 140px;
+    position: relative;
+    width: 420px;
+    height: 280px;
     background-color: #FFFFFF;
-    background-image: url("site_images/upload_image.png");
+    background-image: url("site_images/upload_image.svg");
     box-shadow: 0 3px 5px rgba(42, 42, 42, 0.2);
     background-size: cover;
     background-position: center;
     border-radius: 20px;
+}
+
+.custom-image-upload h3 {
+    opacity: 0;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Fira, sans-serif;
+    font-weight: normal;
+    background-color: #FFFFFF;
+    padding: 10px 15px;
+    border-radius: 15px;
+    box-shadow: 0 3px 7px rgba(42, 42, 42, 0.4);
+    transition: all 0.7s ease;
+    pointer-events: none;
+    min-width: max-content;
 }
 
 .modal-view button {
