--- a/blocks.css
+++ b/blocks.css
@@ -58,10 +58,12 @@
 
     font-size: 0.8em;
     font-weight: normal;
+    cursor: pointer;
 }
 
 .block.add {
     background-color: rgba(255, 255, 255, 0.6);
     background-image: none;
     font-size: 1.5em;
+    cursor: pointer;
 }
