--- a/mindupback/mindup/static/blocks_meetings.css
+++ b/mindupback/mindup/static/blocks_meetings.css
@@ -3,6 +3,7 @@
     position: relative;
     align-items: normal;
     padding: 20px;
+    height: 190px
 }
 
 .block.add {
@@ -16,6 +17,7 @@
     top: 25px;
     right: 20px;
     width: 40px;
+    cursor: pointer;
 }
 
 .meeting-status-tooltip {
@@ -60,8 +62,6 @@
     display: flex;
     align-items: center;
     padding-left: 10px;
-    padding-right: 60px;
-    /*justify-content: center;*/
 }
 
 .block .block-title {
@@ -76,7 +76,8 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    margin-top: 15px;
+    /*margin-top: 15px;*/
+    margin-top: auto;
 }
 
 .icon-text-container {
@@ -108,7 +109,6 @@
 
 .tags-wrapper {
     display: flex;
-    width: 170px;
     flex-direction: column;
     justify-content: space-between;
     font-size: 0.4em;
@@ -146,7 +146,7 @@
 }
 
 .person-container {
-    margin-top: auto;
+    margin-top: 10px;
 }
 
 .person-info {
@@ -168,4 +168,5 @@
     color: #545252;
     font-style: italic;
     font-size: 0.4em;
+    cursor: pointer;
 }
