--- a/mindupback/mindup/static/header.css
+++ b/mindupback/mindup/static/header.css
@@ -56,6 +56,7 @@ header input {
 header input::placeholder {
     text-align: center;
     padding-right: 30px;
+    transition: all 0.2s ease;
 }
 
 header input:focus::placeholder {
