--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -37,17 +37,6 @@
     <div class="blocks-wrapper">
         <div class="blocks">
             <div class="block group add">Добавить группу</div>
-            <div class="block group">
-                <div class="block-background" style="background-image: url('groups_images/fiit.png')"></div>
-                <h2>ФИИТ</h2>
-            </div>
-            <div class="block group">
-                <h2>СКБ Контур</h2>
-            </div>
-            <div class="block group">
-                <div class="block-background" style="background-image: url('groups_images/shad.jpeg')"></div>
-                <h2>ШАД</h2>
-            </div>
         </div>
     </div>
     <div class="modal-wrapper" id="modal-add">
@@ -68,8 +57,11 @@
             </form>
         </div>
     </div>
-<script src="header_controller.js"></script>
-<script src="block_controller.js"></script>
-<script src="groups.js"></script>
+
+    <script src="network.js"></script>
+    <script src="header_controller.js"></script>
+    <script src="block_controller.js"></script>
+    <script src="groups.js"></script>
+    <script src="backend_groups.js"></script>
 </body>
 </html>
