--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -75,8 +75,7 @@
                     <img src="site_images/person.svg" alt="person icon">
                     <div class="person-info">
                         <p class="person-name">Степан Кучин</p>
-                        <p class="person-additional-info">1 курс, Свердловское музыкальное
-                            училище им. П. И. Чайковского</p>
+                        <p class="person-additional-info" title="stepa.kuchin@urfu.me">stepa.kuchin@urfu.me</p>
                     </div>
                 </div>
             </div>
@@ -117,16 +116,18 @@
                     <img src="site_images/person.svg" alt="person icon">
                     <div class="person-info">
                         <p class="person-name">Илья Рыбин</p>
-                        <p class="person-additional-info">10 класс, 9 гимназия г. Екатеринбург</p>
+                        <p class="person-additional-info" title="ilya.rybin@urfu.me">ilya.rybin@urfu.me</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 <script src="network.js"></script>
 <script src="header_controller.js"></script>
 <script src="block_controller.js"></script>
 <script src="meetings.js"></script>
+<script src="backend_meetings.js"></script>
 </body>
 </html>
