--- a/meetings_modal_add.css
+++ b/meetings_modal_add.css
@@ -5,8 +5,9 @@
     left: 0;
     bottom: 0;
     z-index: 1050;
-    pointer-events: none;
-    opacity: 0;
+    /*pointer-events: none;*/
+    /*opacity: 0;*/
+    opacity: 1;
     transition: opacity 200ms ease-in;
 }
 
@@ -36,7 +37,7 @@
     flex-direction: column;
 }
 
-.modal-view input[type="text"] {
+.modal-view .name-input-label input[type="text"] {
     width: 500px;
     height: 40px;
     padding: 0 10px;
@@ -65,11 +66,11 @@
 
 .name-input-label::after {
     margin-top: 5px;
-    height: 20px;
-    content: "До 18 символов";
+    content: "До 35 символов";
     color: #424242;
     width: 100%;
     text-align: center;
+    height: 20px;
     position: absolute;
     top: 100%;
     left: 0;
@@ -78,43 +79,75 @@
     font-size: 0.9em;
 }
 
-.modal-view input[type="file"] {
-    display: none;
-}
 
-.custom-image-upload {
-    display: block;
+
+.modal-add-content-wrapper {
     position: relative;
-    width: 420px;
-    height: 280px;
-    background-color: #FFFFFF;
-    background-image: url("site_images/upload_image.svg");
-    box-shadow: 0 3px 5px rgba(42, 42, 42, 0.2);
-    background-size: cover;
-    background-position: center;
-    border-radius: 20px;
-    margin-top: 20px;
+    width: 560px;
+    height: 300px;
+    padding-left: 40px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    overflow-y: auto;
 }
 
-.custom-image-upload h3 {
-    opacity: 0;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.modal-view .tags {
+    width: 520px;
+}
+
+.modal-view .tags-add-hint {
     font-family: Fira, sans-serif;
     font-weight: normal;
-    background-color: #FFFFFF;
-    padding: 10px 15px;
-    border-radius: 15px;
-    box-shadow: 0 3px 7px rgba(42, 42, 42, 0.4);
-    transition: opacity 0.7s ease, box-shadow 0.2s linear;
-    min-width: max-content;
-    cursor: pointer;
+    font-size: 1.1em;
+    margin: auto 5px;
 }
 
-.custom-image-upload h3:hover {
-    box-shadow: 0 3px 10px rgba(19, 19, 19, 0.63);
+.modal-view .tag {
+    font-size: 1.2em;
+    margin: auto 5px;
+    border-radius: 15px;
+    border: none;
+}
+
+.modal-view .datetime-place-info {
+    display: flex;
+    justify-content: space-between;
+    width: 520px;
+}
+
+.modal-view .datetime-place-info input,
+.modal-view textarea {
+    width: fit-content;
+    height: 15px;
+    padding: 10px;
+    font-size: 1.5em;
+    border: none;
+    border-radius: 20px;
+    box-shadow: 0 3px 5px rgba(42, 42, 42, 0.2);
+}
+
+.modal-view .datetime-place-info input[type="text"] {
+    width: 177px;
+    font-size: 1.1em;
+}
+
+.modal-view textarea {
+    width: 480px;
+    padding: 20px;
+    height: fit-content;
+    min-height: 150px;
+    resize: vertical;
+    overflow-y: auto;
+}
+
+.modal-view textarea::placeholder {
+    transition: all 0.2s ease;
+}
+
+.modal-view textarea:focus::placeholder {
+    opacity: 0;
 }
 
 .modal-view button {
@@ -129,3 +162,5 @@
     border: none;
     outline: none;
 }
+
+
