add shadows on button

--- a/groups_modal_add.css
+++ b/groups_modal_add.css
@@ -128,4 +128,10 @@
     border-radius: 20px;
     border: none;
     outline: none;
+    box-shadow: 0 3px 5px rgba(42, 42, 42, 0.15);
+    transition: all 0.1s ease-out;
+}
+
+.modal-view button:hover {
+    box-shadow: 0 2px 5px rgb(148, 171, 137);
 }
