--- a/meetings_modal_add.css
+++ b/meetings_modal_add.css
@@ -5,9 +5,9 @@
     left: 0;
     bottom: 0;
     z-index: 1050;
-    /*pointer-events: none;*/
-    /*opacity: 0;*/
-    opacity: 1;
+    pointer-events: none;
+    opacity: 0;
+    /*opacity: 1;*/
     transition: opacity 200ms ease-in;
 }
 
