--- a/mindupback/mindup/static/meetings.css
+++ b/mindupback/mindup/static/meetings.css
@@ -27,3 +27,17 @@ body {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.source-group-name {
+    display: none;
+    margin: 30px auto 20px auto;
+    padding: 5px 20px;
+    min-width: 150px;
+    width: fit-content;
+    text-align: center;
+    background-color: #F6FFE8;
+    border-radius: 10px;
+    font-family: "Segoe UI", "Helvetica Neue", Roboto, Arial, sans-serif;
+    font-weight: 500;
+    box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.2);
+}
