--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="menuGroup">
-            <a href="/brawlstars" class="logo">MindUp</a>
+            <div class="logo">MindUp</div>
         </div>
         <div class="menuGroup">
             <a href="groups.html" class="groupsLink">Группы</a>
@@ -28,7 +28,7 @@
                 </form>
             </div>
         </div>
-        <a href="/brawlstars" class="menuGroup profile">
+        <a class="menuGroup profile">
             <img src="site_images/profile.svg" alt="Profile" class="profile-svg"></img>
             <p>Профиль</p>
         </a>
