--- a/mindupback/mindup/static/meetings_modal_add.css
+++ b/mindupback/mindup/static/meetings_modal_add.css
@@ -145,6 +145,7 @@
     min-height: 150px;
     resize: vertical;
     overflow-y: auto;
+    text-align: left;
 }
 
 .modal-view textarea::placeholder {
