--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -29,10 +29,17 @@
                 </form>
             </div>
         </div>
-        <a class="menuGroup profile">
+        <button class="menuGroup profile" onclick="openProfileInfo()">
             <img src="site_images/profile.svg" alt="Profile" class="profile-svg">
             <p>Профиль</p>
-        </a>
+        </button>
+        <div class="profile-info-container">
+            <p>Рыбин Илья Байденович</p>
+            <div class="profile-additional-info">
+                <p>Email: bebra.com</p>
+                <p style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
+            </div>
+        </div>
     </header>
     <div class="background-container">
         <div class="background-dimmer"></div>
