--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -33,10 +33,10 @@
             <p>Профиль</p>
         </button>
         <div class="profile-info-container">
-            <p>Рыбин Илья Байденович</p>
+            <p id="profileName">Рыбин Илья Байденович</p>
             <div class="profile-additional-info">
-                <p>Email: bebra.com</p>
-                <p style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
+                <p id="profileEmail">Email: bebra.com</p>
+                <p id="profilePubDate" style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
             </div>
         </div>
     </header>
@@ -70,5 +70,6 @@
     <script src="block_controller.js"></script>
     <script src="groups.js"></script>
     <script src="backend_groups.js"></script>
+    <script src="backend_header.js"></script>
 </body>
 </html>
