--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -178,5 +178,6 @@
     <script src="meetings.js"></script>
     <script src="meetings_modal_add.js"></script>
     <script src="backend_meetings.js"></script>
+    <script src="backend_header.js"></script>
 </body>
 </html>
