--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -34,10 +34,10 @@
             <p>Профиль</p>
         </button>
         <div class="profile-info-container">
-            <p>Рыбин Илья Байденович</p>
+            <p id="profileName">Рыбин Илья Байденович</p>
             <div class="profile-additional-info">
-                <p>Email: bebra.com</p>
-                <p style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
+                <p id="profileEmail">Email: bebra.com</p>
+                <p id="profilePubDate" style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
             </div>
         </div>
     </header>
