--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -87,6 +87,9 @@
                             <p class="person-additional-info" title="stepa.kuchin@urfu.me">stepa.kuchin@urfu.me</p>
                         </div>
                     </div>
+                    <div class="members-count-info">
+                        10 / 20
+                    </div>
                 </div>
             </div>
             <div class="block">
