--- a/registration.css
+++ b/registration.css
@@ -31,7 +31,7 @@ h3{
     align-items: center;
 }
 
-#loginContainer {
+#login-container {
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -51,7 +51,7 @@ body{
 }
 
 
-.helloText{
+.hello-text{
     color: #4A8B49;
     margin: 0;
 }
