--- a/mindupback/mindup/templates/registration.html
+++ b/mindupback/mindup/templates/registration.html
@@ -31,7 +31,7 @@
             Зарегистрироваться
         </button>
         <div class="underText">
-            Уже есть&nbsp<a href="authsdn.html">учетная запись</a>
+            Уже есть&nbsp<a href="authorisation.html">учетная запись</a>
         </div>
     </form>
 </div>
