--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -39,6 +39,7 @@
                 <p id="profileEmail">Email: bebra.com</p>
                 <p id="profilePubDate" style="font-size: 1em; margin-bottom: -5px">Зарегистрирован: 2024-05-08 17:07:08</p>
             </div>
+            <a href="authorisation.html">Выйти</a>
         </div>
     </header>
     <div class="background-container">
