--- a/mindupback/mindup/static/header.css
+++ b/mindupback/mindup/static/header.css
@@ -68,6 +68,17 @@ input:-webkit-autofill:active {
     color: #424242;
 }
 
+header .profile-info-container a {
+    text-align: left;
+    margin: 10px 0 0 0;
+    color: #3b3b3b;
+    text-decoration: underline;
+}
+
+header .profile-info-container a:hover {
+    color: #707070;
+}
+
 .menuGroup {
     display: flex;
     gap: 20px;
