--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -149,10 +149,7 @@
                 <div class="modal-add-content-wrapper">
                     <div class="tags">
                         <p class="tags-add-hint">Добавить тег</p>
-                        <div class="tag">+</div>
-                        <label>
-                            <input type="text" class="tag" name="tag1">
-                        </label>
+                        <div class="tag" id="addTag">+</div>
                     </div>
                     <div class="datetime-place-info">
                         <label>
