--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -98,6 +98,7 @@
                     <div class="time">22:22 02.02.22</div>
                     <div class="place">Online</div>
                 </div>
+                <div class="groupNameInfo"></div>
                 <div class="modal-add-content-wrapper">
                     <div class="tags">
                         <div class="tag">#123</div>
