--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -24,7 +24,7 @@
                     <label>
                         <input type="text" placeholder="Поиск" id="searchInput" onkeypress="handleKeyPress(event)">
                     </label>
-                    <button type="button" class="searchButton" onclick="search()">
+                    <button type="button" class="searchButton" onclick="searchInMeetings()">
                         <img src="site_images/search.svg" alt="search" width="21px">
                     </button>
                 </form>
