--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -22,7 +22,7 @@
                     <label>
                         <input type="text" placeholder="Поиск" id="searchInput" onkeypress="handleKeyPress(event)">
                     </label>
-                    <button type="button" class="searchButton" onclick="search()">
+                    <button type="button" class="searchButton" onclick="searchInGroups()">
                         <img src="site_images/search.svg" alt="search" width="21px">
                     </button>
                 </form>
