--- a/mindupback/mindup/static/meetings_modal_add.css
+++ b/mindupback/mindup/static/meetings_modal_add.css
@@ -142,6 +142,7 @@
 }
 
 .modal-view .datetime-place-info input,
+.modal-view .members-limit input[type="number"],
 .modal-view textarea {
     width: fit-content;
     height: 15px;
@@ -157,6 +158,39 @@
     width: 177px;
     font-size: 1.1em;
 }
+
+
+
+
+.modal-view .members-limit {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.modal-view .members-limit input[type="number"] {
+    width: 70px;
+    padding-left: 20px;
+    font-size: 1em;
+}
+
+.modal-view .members-limit input[type="number"] {
+    margin: 0;
+    background-color:  #f1f1f1;
+}
+
+.modal-view .members-limit input[type="number"]::placeholder {
+    color: rgba(98, 98, 98, 0.6);
+}
+
+.modal-view .members-limit label {
+    font-family: Fira, sans-serif;
+    font-weight: normal;
+    font-size: 1.1em;
+    margin: 0;
+}
+
+
 
 .modal-view textarea {
     width: 480px;
