--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -78,6 +78,15 @@
                             <input type="text" name="place" placeholder="Место" maxlength="35" required>
                         </label>
                     </div>
+                    <div class="members-limit">
+                        <label>
+                            <input type="checkbox" value=True name="is_max_members_number_limited" id="max_members_number_input">
+                            Ограничить количество участников
+                        </label>
+                        <label>
+                            <input type="number" name="max_members_number" placeholder="0" min=2 id="member_limit" disabled>
+                        </label>
+                    </div>
                     <label>
                         <textarea name="description" placeholder="Описание встречи"></textarea>
                     </label>
