--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -56,6 +56,7 @@
         <div class="modal-blackout"></div>
         <div class="modal-view">
             <form action="/api/send_meeting" method="post" enctype="multipart/form-data">
+                <img src="/site_images/reload.svg" class="reloadImage" alt="reload" onclick="reloadForm()">
                 <label class="display-none-input">
                     <input type="text" name="organization_id" id="meetingAddOrgId">
                 </label>
