--- a/mindupback/mindup/static/meetings_modal_add.css
+++ b/mindupback/mindup/static/meetings_modal_add.css
@@ -31,10 +31,24 @@
 
 .modal-view form {
     display: flex;
+    position: relative;
     height: 100%;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+}
+
+.modal-view .reloadImage {
+    position: absolute;
+    width: 25px;
+    right: -10px;
+    top: -10px;
+    color: #0d361a;
+    transition: all 50ms ease-out;
+}
+
+.modal-view .reloadImage:hover {
+    filter: drop-shadow(0px 4px 5px rgba(79, 93, 60, 0.38));
 }
 
 .modal-view .display-none-input {
