--- a/mindupback/mindup/templates/meetings.html
+++ b/mindupback/mindup/templates/meetings.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="blocks.css">
     <link rel="stylesheet" href="meetings_blocks.css">
+    <link rel="stylesheet" href="modals_main.css">
     <link rel="stylesheet" href="meetings_modal_add.css">
     <link rel="stylesheet" href="meetings_modal_info.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
