--- a/mindupback/mindup/static/meetings_modal_info.css
+++ b/mindupback/mindup/static/meetings_modal_info.css
@@ -5,7 +5,7 @@
 
 
 .modal-wrapper.info .modal-view {
-    height: 500px;
+    height: 80%;
     font-family: Fira, sans-serif;
     font-weight: normal;
     display: flex;
@@ -27,7 +27,7 @@
     height: 400px;
     margin-top: 0;
     padding-left: 0;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 .modal-wrapper.info .modal-add-content-wrapper .tags {
@@ -86,6 +86,12 @@
     margin: 0 auto;
 }
 
+
+@media screen and (max-width: 680px) {
+    .modal-wrapper.info .modal-view {
+        width: 500px;
+    }
+}
 
 @media screen and (max-width: 600px) {
     .modal-wrapper.info .modal-view {
