--- a/mindupback/mindup/templates/groups.html
+++ b/mindupback/mindup/templates/groups.html
@@ -5,6 +5,7 @@
     <title>Группы</title>
     <link rel="stylesheet" href="blocks.css">
     <link rel="stylesheet" href="groups.css">
+    <link rel="stylesheet" href="modals_main.css">
     <link rel="stylesheet" href="groups_modal_add.css">
     <link rel="stylesheet" href="header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
